# cpp-sandbox-april2017

./: .gitignore  CMakeLists.txt  CMakeSettings.json  conan_include.cmake  conanfile.py  conanfile.txt
include/core/: timer_lib_core.hpp
src/: CMakeLists.txt
src/core/: main.cpp  timer_lib_core.cpp
src/main/timer/: CMakeLists.txt  timer.cpp  timer.h
src/test/: CMakeLists.txt  testMain.cpp
src/test/catch_main/: CMakeLists.txt  catch_main.cpp  conanfile.txt
src/test/timer/: CMakeLists.txt  conanfile.txt  timerTest.cpp  timerTest.h
test/: CMakeLists.txt
test/catch_main/: CMakeLists.txt
test/core/: timer_lib_core_test.cpp  timer_lib_core_test.hpp
